--- a/styles.css
+++ b/styles.css
@@ -56,10 +56,9 @@ main {
 }
 
 #about img {
-    max-width: 100%; /* Set the maximum width to 100% of the container */
+    max-width: 75%; /* Set the maximum width to 100% of the container */
     height: auto; /* Maintain the aspect ratio */
-    border-radius: 8px; /* Optional: Add border-radius for a rounded appearance */
-    padding-top: 2.5%;
+    padding-top: 6%;
     padding-bottom: 10%;
 }
 
@@ -67,7 +66,7 @@ main {
 
 #products {
     text-align: center;
-    padding: 20px;
+    padding: 20%;
 }
 
 .product-cards {
@@ -75,6 +74,7 @@ main {
     justify-content: space-around;
     flex-wrap: nowrap; /* Prevent cards from wrapping to the next line */
     overflow-x: auto; /* Add horizontal scroll if cards exceed the width */
+    padding: 2.5%;
 }
 
 .product-card {
