--- a/styles.css
+++ b/styles.css
@@ -137,11 +137,76 @@ main {
     max-width: 400px;
 }
 
+.contact-details {
+    flex: 1;
+    max-width: 400px;
+}
+
+.map-container {
+    flex: 1;
+    max-width: 600px;
+    margin-right: 20px;
+}
+
+.map {
+    width: 100%;
+    height: 300px; /* Adjust the height as needed */
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+/* Send Email Section */
+.contact-form {
+    text-align: center;
+    padding: 20px;
+    /* background-color: #f9f9f9; */
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%; /* Adjust the width as needed */
+}
+
+.contact-form h2 {
+    color: #639578;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+input, textarea {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type="submit"] {
+    background-color: #639578;
+    color: #fff;
+    cursor: pointer;
+    width: 200px;
+}
+
+input[type="submit"]:hover {
+    background-color: #4d724d;
+}
+
 footer {
     background-color: #639578;
     color: #fff;
     text-align: center;
-    position: fixed;
+    /* position: fixed; */
     bottom: 0;
     width: 100%;
     z-index: 1000;
